<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sortMenuItem"
        android:icon="@drawable/sort"
        android:title="Sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sortByCreatedDate"
                android:title="@string/by_created_date" />
            <item
                android:id="@+id/sortByScheduledDate"
                android:title="@string/by_scheduled_date" />
        </menu>
    </item>

    <item
        android:id="@+id/generateNoteMenuItem"
        android:title="@string/generate_note"/>

    <item
        android:id="@+id/deleteAllNotesMenuItem"
        android:title="@string/delete_all_notes"/>

</menu>