<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center">
    
    <TextView
        android:id="@+id/noteCounterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_counter"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/generateNotesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/deleteAllNotesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textAllCaps="true"/>

</LinearLayout>